# Zetta-Agent

./: .gitignore  CHANGELOG.md  Cargo.toml  MINIMAL_USAGE.md  MINIMAL_USAGE.zh-CN.md  README.md  ROADMAP.md
crates/zetta-cli/: Cargo.toml
crates/zetta-cli/src/: hook_config.rs  main.rs  permission_config.rs  prompting.rs  provider_config.rs  repl.rs  runtime.rs  session_view.rs  tui.rs
crates/zetta-core/: Cargo.toml
crates/zetta-core/src/: engine.rs  hook.rs  lib.rs
crates/zetta-core/src/model/: mod.rs  openai_compatible.rs  rule_based.rs  tool_transcript.rs
crates/zetta-core/src/session/: file_store.rs  mod.rs
crates/zetta-core/src/tool/: bash.rs  echo.rs  file_edit.rs  file_edit_lines.rs  file_read.rs  file_read_lines.rs  file_write.rs  glob.rs  grep.rs  mod.rs  permission.rs
crates/zetta-protocol/: Cargo.toml
crates/zetta-protocol/src/: lib.rs
