[workspace]
members = [
  "crates/zetta-protocol",
  "crates/zetta-core",
  "crates/zetta-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Zihan + Codex"]
repository = "https://github.com/ASIC-Embodied-AI/Zetta-Agent"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.15"
tokio = { version = "1.44", features = ["fs", "macros", "rt-multi-thread"] }
uuid = { version = "1.15", features = ["serde", "v4"] }
