[package]
name = "zetta-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

zetta-core = { path = "../zetta-core" }
zetta-protocol = { path = "../zetta-protocol" }
