[package]
name = "zetta-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Interactive CLI and REPL for the Zetta Rust agent runtime"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
unicode-width.workspace = true

zetta-core = { path = "../zetta-core" }
zetta-protocol = { path = "../zetta-protocol" }
