[package]
name = "zetta-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

zetta-protocol = { path = "../zetta-protocol" }

[dev-dependencies]
tempfile.workspace = true
